src/test/ui/reachable/expr_add.stderr
error: unreachable expression
  --> $DIR/expr_add.rs:27:13
   |
27 |     let x = Foo + return; //~ ERROR unreachable
   |             ^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_add.rs:13:9
   |
13 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

